# imageManager

./: .gitignore  CMakeLists.txt  main.cpp
Colors/: ColorSpace.h  ColorSpaceRegister.h  Color_RGB.cpp  Color_RGB.h  colorspacelist.txt
Colors/Spaces/Lab/: LAB_Base.h  OKLab.cpp  OKLab.h
Colors/Spaces/Other/: LMS.cpp  LMS.h  XYZ.h
Colors/Spaces/RGB/: RGB_Base.h  sRGB.cpp  sRGB.h
Images/: ImgLayer.h
